refactor: Simplify CORS configuration, remove unused code, and update project and user models to use List instead of Set for collections