@@ -1,9 +1,9 @@
 package com.projectmanage.main.config;
 
-import java.util.Arrays;
-
+import com.projectmanage.main.service.CustomOAuth2UserService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
@@ -12,9 +12,9 @@ import org.springframework.security.web.authentication.SimpleUrlAuthenticationSu
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
-import com.projectmanage.main.service.CustomOAuth2UserService;
+import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -30,10 +30,8 @@ public class SecurityConfig {
     public AuthenticationSuccessHandler oauth2AuthenticationSuccessHandler() {
         SimpleUrlAuthenticationSuccessHandler handler = new SimpleUrlAuthenticationSuccessHandler();
         handler.setRedirectStrategy((request, response, url) -> {
+            // Always redirect to the frontend URL after successful authentication
             response.sendRedirect("http://localhost:5173");
-            // Set cookies with SameSite=None for cross-domain authentication
-            response.addHeader("Set-Cookie", "JSESSIONID=" + request.getSession().getId() +
-                    "; Path=/; HttpOnly; SameSite=None; Secure");
         });
         return handler;
     }
@@ -41,66 +39,44 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .cors(Customizer.withDefaults())
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**", "/oauth2/**", "/login/oauth2/code/**").permitAll()
-                        .anyRequest().authenticated())
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .anyRequest().authenticated()
+                )
                 .oauth2Login(oauth2 -> oauth2
-                        .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
+                        .userInfoEndpoint(userInfo -> 
+                            userInfo.userService(customOAuth2UserService)
+                        )
                         .successHandler(oauth2AuthenticationSuccessHandler())
-                        .authorizationEndpoint(authEndpoint -> authEndpoint.baseUri("/oauth2/authorization"))
-                        .redirectionEndpoint(redirectEndpoint -> redirectEndpoint.baseUri("/login/oauth2/code/*")))
+                        .authorizationEndpoint(authEndpoint -> 
+                            authEndpoint.baseUri("/oauth2/authorization")
+                        )
+                        .redirectionEndpoint(redirectEndpoint -> 
+                            redirectEndpoint.baseUri("/login/oauth2/code/*")
+                        )
+                )
                 .logout(logout -> logout
                         .logoutUrl("/api/auth/logout")
                         .logoutSuccessUrl("http://localhost:5173")
                         .invalidateHttpSession(true)
                         .clearAuthentication(true)
-                        .deleteCookies("JSESSIONID"))
+                        .deleteCookies("JSESSIONID")
+                )
                 .build();
-    }
-
-    @Bean
-    public CorsFilter corsFilter() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.addAllowedOrigin("http://localhost:5173");
-        config.addAllowedOrigin("https://accounts.google.com");
-        config.addAllowedHeader("*");
-        config.addAllowedMethod("*");
-        config.setMaxAge(3600L);
-        source.registerCorsConfiguration("/**", config);
-        return new CorsFilter(source);
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "https://accounts.google.com")); // React
-                                                                                                                // dev
-                                                                                                                // server
-                                                                                                                // and
-                                                                                                                // Google
-                                                                                                                // OAuth
+        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // React dev server
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(
-                Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "Set-Cookie"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
         configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
-
-        // Add specific configuration for Google OAuth endpoints
-        CorsConfiguration googleOAuthConfig = new CorsConfiguration();
-        googleOAuthConfig.setAllowedOrigins(Arrays.asList("*")); // Allow all origins for OAuth redirects
-        googleOAuthConfig.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
-        googleOAuthConfig.setAllowedHeaders(Arrays.asList("*"));
-        googleOAuthConfig.setAllowCredentials(false); // No credentials for third-party domains
-
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-        source.registerCorsConfiguration("/oauth2/**", googleOAuthConfig);
-        source.registerCorsConfiguration("/login/oauth2/code/**", googleOAuthConfig);
         return source;
     }
 }
